auto-refactor various things into java 21